--- a/app/views/shared/_widget_ad_bible_app.html.haml
+++ b/app/views/shared/_widget_ad_bible_app.html.haml
@@ -1,14 +1,15 @@
-.widget.ad_bible_app
-  %aside.ad_bible_app
-    %p
-      %b
-        = t("download ad.title")
-    %p
-      = "#{t('download ad.line 1')}<br />".html_safe
-      = "#{t('download ad.line 2')}<br />".html_safe
-      = t('download ad.line 3')
-    %p
-      %a.more_arrow{:href => '/mobile'}= t("download ad.download")
+= cache('widget_ad_bible_app') do
+  .widget.ad_bible_app
+    %aside.ad_bible_app
+      %p
+        %b
+          = t("download ad.title")
+      %p
+        = "#{t('download ad.line 1')}<br />".html_safe
+        = "#{t('download ad.line 2')}<br />".html_safe
+        = t('download ad.line 3')
+      %p
+        %a.more_arrow{:href => '/mobile'}= t("download ad.download")
 
 
      
