--- a/app/views/shared/_menu_book_chapter.html.haml
+++ b/app/views/shared/_menu_book_chapter.html.haml
@@ -1,27 +1,28 @@
-#menu_book_chapter.dynamic_menu
-  .spinner_wrapper{style: "display: none;"}
-    #book_chapter_spinner.dynamic_menu_spinner
-  %span.menu_arrow
-    &nbsp;
-  #menu_book
-    %header
-      =t("book")
-    .scroll
-      %ul
-        - @version.books.each do |k, v|
-          %li{class: k == @reference[:book] ? t("selected") : ''}
-            %a{:href => '#', 'data-book' => "#{k}", 'data-version' => "#{@version.osis}", 'data-chapters' => "#{v["chapters"]}"}= v["human"]
-  #menu_chapter
-    %header
-      =t("chapter")
-    .scroll
-      %ol
-        - i = 1
-        %li.highlighted
-          %a{:href => '#'}
-            = i
-        - 48.times do
-          - i+= 1
-          %li
+= cache "book_chapter_#{@version}_#{@reference[:book]}" do
+  #menu_book_chapter.dynamic_menu
+    .spinner_wrapper{style: "display: none;"}
+      #book_chapter_spinner.dynamic_menu_spinner
+    %span.menu_arrow
+      &nbsp;
+    #menu_book
+      %header
+        =t("book")
+      .scroll
+        %ul
+          - @version.books.each do |k, v|
+            %li{class: k == @reference[:book] ? t("li_active") : ''}
+              %a{:href => '#', 'data-book' => "#{k}", 'data-version' => "#{@version.osis}", 'data-chapters' => "#{v["chapters"]}"}= v["human"]
+    #menu_chapter
+      %header
+        =t("chapter")
+      .scroll
+        %ol
+          - i = 1
+          %li.highlighted
             %a{:href => '#'}
               = i
+          - 48.times do
+            - i+= 1
+            %li
+              %a{:href => '#'}
+                = i
