--- a/app/views/shared/_widget_ad_bible_app.html.haml
+++ b/app/views/shared/_widget_ad_bible_app.html.haml
@@ -1,4 +1,4 @@
-= cache('widget_ad_bible_app'), expires_in: 12.hours do
+= cache 'widget_ad_bible_app', expires_in: 12.hours do
   .widget.ad_bible_app
     %aside.ad_bible_app
       %p
