AJAX HIGHLIGHT AND I FIXED EVAN'S BUG YAY
Change-Id: I36e9815b175c8a4b668771e350b8074d1ee22f8b

--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -30,7 +30,7 @@
         %tr
           %th{:colspan => '2'}= t('recent versions')
         - @recent_versions.each do |v|
-          = render partial: 'item', locals: {version: v}
+          = render partial: 'item', locals: {version: v, alt: true}
       %tr
         %th{:colspan => '2'}= @alt_version.language.human
       - @this_language.each do |k, v|
