--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -14,12 +14,12 @@
 %article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => "[#{@verses}]", "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   = link_to("previous", bible_path(@reference.previous), class: "nav_prev") if @reference.previous
   = link_to("next", bible_path(@reference.next), class: "nav_next") if @reference.next
-  #version_primary{"data-highlights" => @highlights.to_json}
+  #version_primary{"data-reference" => @reference.osis}
     - @reference.contents.each do |r|
       = r.html_safe
   -# TODO: Make boom sauce, to compliment the awesome sauce.
   -# Aka: Make this thing output a secondary Bible version, KJV or sumthin'.
-  #version_secondary{"data-highlights" => @alt_highlights.to_json}
+  #version_secondary{"data-reference" => @alt_reference.osis}
     - @alt_reference.contents.each do |r|
       = r.html_safe
 
