fixing localization file format bug and sign-up bug

--- a/app/views/users/new_facebook.html.haml
+++ b/app/views/users/new_facebook.html.haml
@@ -14,7 +14,7 @@
       %br
       = f.text_field :username
     %p
-      = f.label :password, t("users.password")
+      = f.label :password, t("users.password title")
       %br
       = f.password_field :password
     %p
