--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -18,7 +18,7 @@
     %br
     = f.text_field :username
   %p
-    = f.label :password, t("users.password title")
+    = f.label :password, t("password prompt")
     %br
     = f.password_field :password
   %p
