--- a/app/assets/sass/_pages.sass
+++ b/app/assets/sass/_pages.sass
@@ -123,6 +123,9 @@ a.cta span
 #dl_windows 
   background: url(../images/mobile_dl_icons.png) 0px -150px no-repeat !important
 
+#dl_windows8 
+  background: url(../images/mobile_dl_icons.png) 0px -150px no-repeat !important
+
 #dl_hppalm 
   background: url(../images/mobile_dl_icons.png) 0px -200px no-repeat !important
 
