amazon image and link

--- a/app/assets/sass/_pages.sass
+++ b/app/assets/sass/_pages.sass
@@ -138,6 +138,8 @@ a.cta span
 #dl_mobile 
   background: url(../images/mobile_dl_icons.png) 0px -350px no-repeat !important
 
+#dl_amazon
+  background: url(../images/mobile_dl_icons.png) 0px -400px no-repeat !important
 
 #main section.testimonials h2
   font-size: 18px
