--- a/app/views/pages/mobile.html.haml
+++ b/app/views/pages/mobile.html.haml
@@ -21,6 +21,7 @@
 			%li#dl_java= link_to t('mobile page.java'), "http://www.getjar.com/mobile/29005/bible-app"
 			%li#dl_symbian= link_to t('mobile page.symbian'), "http://www.getjar.com/mobile/29005/bible-app"
 			%li#dl_mobile= link_to t('mobile page.mobile web'), "http://m.youversion.com"
+			%li#dl_amazon= link_to t('mobile page.amazon'), "http://www.amazon.com/YouVersion-Bible/dp/B004MC8CA2"
 		%a.cta
 			%img.float_left{:src => "images/mobile_download.png"}
 			%h4= t('mobile page.button h4')
