--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -12,7 +12,7 @@
       %dl.categories_menu
         %dt
           %div{style: "text-align: center; margin-bottom: 5px"}
-            %em.mute{style: "margin-bottom: 10px; font-size: 12px; font-weight: normal"}= t('searching.total results', total: number_to_human(@query.total_results, :precision => 2).downcase).html_safe
+            %em.mute{style: "margin-bottom: 10px; font-size: 12px; font-weight: normal"}= t('searching.total results', total: number_with_delimiter(@query.total_results, :precision => 2).downcase).html_safe
         - Search.categories.each do |category|
           %dd{class: @query.category == category ? "highlighted" : ""}
             %a{href: search_path(category: category, q: params[:q])}
