--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -27,9 +27,9 @@
         %a.tooltip{:href => current_auth ? user_following_path(current_auth.username) : sign_up_path(source: "friends", redirect: "/friends"), style: "display: none;"}
           %span=t("friends")
       %li#nav_primary_live
-        %a.icon{:href => "http://#{([:en, :de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :en).to_s.downcase.gsub("_", "-")}.a.youversion.com/live"}
+        %a.icon{:href => "http://#{([:de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :www).to_s.downcase.gsub("_", "-")}.a.youversion.com/live"}
           %span &nbsp;
-        %a.tooltip{:href => "http://#{([:en, :de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :en).to_s.downcase.gsub("_", "-")}.a.youversion.com/live", style: "display: none;"}
+        %a.tooltip{:href => "http://#{([:de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :www).to_s.downcase.gsub("_", "-")}.a.youversion.com/live", style: "display: none;"}
           %span=t("live")
       %li#nav_primary_mobile
         %a.icon{:href => '/mobile'}
