fixed view caching for localizations

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,7 +4,7 @@
   %nav
     %ul
       - if current_auth
-        = cache "header_#{current_auth.username}", expires_in: 10.minutes do
+        = cache "header_#{current_auth.username}_#{I18n.locale}", expires_in: 10.minutes do
           %li
             %a#header_profile_trigger{:href => '#'}
               %span
@@ -25,7 +25,7 @@
               %span
                 =t("find friends")
       - else
-        = cache "header_anon", expires_in: 1.hour do
+        = cache "header_anon_#{I18n.locale}", expires_in: 1.hour do
           %li
             %p= link_to t("sign in"), sign_in_path(redirect: params[:redirect]), :class=> "sign_in"
           %li
