turning on paypal for now
Change-Id: Ie48d5109e29ce3ac3c0143a5d69577161cd898e4

--- a/app/views/pages/donate.html.haml
+++ b/app/views/pages/donate.html.haml
@@ -4,8 +4,7 @@
 -# Specific stylesheet for Donate page:
 
 - content_for :stylesheets do
-  %link{:rel => 'stylesheet', :href => '/stylesheets/donate.css'}
-
+  = stylesheet_link_tag "donate"
 -# Alt text for 3 promo images:
 
 - alt_for_promo_1 = t('donate.promo 1')
