--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -4,7 +4,7 @@
 - @canonical = reference_url(@reference)
 
 - content_for :sidebar do
-  = render '/shared/widget_bookmarks' unless @bookmarks.empty?
+  = render partial: '/shared/widget_bookmarks_stub' if current_auth
   = render_cell :notes_list_widget, :stub, title: t("notes.community notes")
   = render '/shared/widget_ad_bible_app'
   = render partial: '/shared/widget_parallel_notes', locals: {hide_widget: true}
