--- a/app/views/shared/_widget_bookmarks.html.haml
+++ b/app/views/shared/_widget_bookmarks.html.haml
@@ -1,18 +1,22 @@
 .widget.bookmarks
   %header
-    %a.count{href: user_bookmarks_path(current_user)}= @bookmarks.total
+    %a.count{href: user_bookmarks_path(current_auth.username)}= @bookmarks.total
     %span.header_icon_bookmark= t('recent bookmarks')
   %ul
-    - @bookmarks.first(5).each do |b|
+    - if !@bookmarks.empty?
+      - @bookmarks.first(5).each do |b|
+        %li
+          %b= b.title
+          %br
+          - b.reference_list.each do |r|
+            = link_to r, bible_path(r)
+          - if b.labels
+            %span.separator |
+            - b.labels.split(",").each do |l|
+              %span.tag
+                %a{href: user_bookmarks_path(current_auth.username, :label => l)}= l
+    - else
       %li
-        %b= b.title
-        %br
-        - b.reference_list.each do |r|
-          = link_to r, bible_path(r)
-        - if b.labels
-          %span.separator |
-          - b.labels.split(",").each do |l|
-            %span.tag
-              %a{href: user_bookmarks_path(current_user, :label => l)}= l
+        %p= "No bookmarks found..."
     %li.align_right
-      %a.more_arrow{href: user_bookmarks_path(current_user)}= t('show all bookmarks', total: @bookmarks.total)
+      %a.more_arrow{href: user_bookmarks_path(current_auth.username)}= t('show all bookmarks', total: @bookmarks.total)
