--- a/app/views/plans/index_subscriptions.html.haml
+++ b/app/views/plans/index_subscriptions.html.haml
@@ -40,7 +40,7 @@
               .progress_bar_shadow
                 .progress_percent_complete{style: "left:#{sub.progress}%"}
                   %b= t("percentage display", number: sub.progress)
-                  .small= t("plans.completion status (below percentage)")
+                  .small= t("plans.completion status _ below percentage")
     = render "shared/pagination", resource_list: @user.subscriptions
   - else
     %div{class: "none"}= (@user == current_user) ? t("plans.you have no plans") : t("plans.no public plans", username: @user.username)
