added ability to create note from notes index

--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -6,7 +6,7 @@
     - unless content_for?(:sidebar)
       - # Default sidebar
       - content_for :sidebar do
-        = render "shared/widget_profile_settings" if @selected != :recent_activity
+        = render "shared/widget_profile_settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
         = render "shared/widget_user_badges" unless @user.badges.empty?
     = render(partial: "user_info", locals: {user: @user}) if @selected == :recent_activity
     %article
