--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -1,3 +1,10 @@
+- content_for :sidebar do
+  .widget.gutter_bottom_half
+    %a.action_button_green{href: current_auth ? new_note_path : sign_up_path(source: "note", redirect: "/notes/new")}
+      %span.icon_plus= t('notes.new note')
+      
+  = render '/shared/widget_ad_bible_app'
+
 - content_for :user_main do
   - if @notes.empty?
     %p= t('no notes found', username: @user.username)
