--- a/app/views/notes/_list_item.html.haml
+++ b/app/views/notes/_list_item.html.haml
@@ -1,4 +1,4 @@
-%li{id: list_item.id, class: ("li_note" if display == :icon)}
+%li{id: list_item.id, class: ("li_note li_bookmark" if display == :icon)}
   - if display == :avatar
     .float_left
       %a{href: user_path(list_item.username)}
@@ -9,6 +9,13 @@
     - if display == :avatar
       %p.mute.small.negative_gutter_top_half
         %a{href: user_path(list_item.username)}= list_item.username
-
     %p= truncate list_item.content_text, length: 300, separator: " "
+    .bookmark_edit.float_right
+      %p
+        - if @me
+          %span= link_to('edit', edit_note_path(list_item.id))
+          &mdash;
+          %span.confirm= link_to('delete', note_path(list_item.id), "data-confirm-text" => t("bookmarks.confirm delete"), :method => :delete) 
+          &mdash;
+        %span.created_as_date= t('created ago', time_ago: time_ago_in_words(list_item.created_as_date))
     %p.mute.small.negative_gutter_top_half= link_to_references(list_item.reference_list) 
