--- a/app/cells/version_selector/_item.haml
+++ b/app/cells/version_selector/_item.haml
@@ -1,10 +1,7 @@
-- alt ||= nil
-- href = "#"
-- href = (@reference ? bible_path(@reference.merge(version: version.osis)) : url_for(@params.merge(version: version.osis))) unless alt
-
+- href = link_params ? url_for(link_params.merge(version: version.osis)) : "#"
 %tr
   %th
-    %a{class: alt ? "spinner_trigger alt_version_link" : "spinner_trigger", "data-version" => version.osis, :href => href}= version.osis_human
+    %a.spinner_trigger{"data-version" => version.osis, :href => href}= version.osis_human
   %td{class: version.audio? ? "audio" : ""}
-    %a{class: alt ? "spinner_trigger alt_version_link" : "spinner_trigger", "data-version" => version.osis, :href => href}
+    %a.spinner_trigger{"data-version" => version.osis, :href => href}
       %div= version.title
