--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,4 +1,4 @@
-#menu_version.dynamic_menu.version_select{style: @force_style}
+.dynamic_menu.version_select{style: @force_style, id: @is_alt ? "menu_alt_version" : "menu_version", "data-reference" => bible_path(@ref.merge({version: nil, verse: nil}))}
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
@@ -9,34 +9,6 @@
         %tr
           %th{:colspan => '2'}= t('recent versions')
         - @recent_versions.each do |v|
-          = render partial: 'item', locals: {version: v}
-      %tr
-        %th{:colspan => '2'}= @version.language.human
-      - @this_language.each do |k, v|
-        = render partial: 'item', locals: {version: v}
-      - @all_languages.each do |k, v|
-        %tr
-          %th{:colspan => '2'}= @languages[k]
-        - v.each do |kk, vv|
-          = render partial: 'item', locals: {version: vv}
-#menu_alt_version.dynamic_menu.version_select
-  .spinner_wrapper{style: "display: none;"}
-    #version_spinner.dynamic_menu_spinner
-  %span.menu_arrow
-    &nbsp;
-  .scroll
-    %table
-      - if !@recent_versions.empty?
-        %tr
-          %th{:colspan => '2'}= t('recent versions')
-        - @recent_versions.each do |v|
-          = render partial: 'item', locals: {version: v, alt: true}
-      %tr
-        %th{:colspan => '2'}= @alt_version.language.human
-      - @this_language.each do |k, v|
-        = render partial: 'item', locals: {version: v, alt: true}
-      - @all_languages.each do |k, v|
-        %tr
-          %th{:colspan => '2'}= @languages[k]
-        - v.each do |kk, vv|
-          = render partial: 'item', locals: {version: vv, alt: true}
+          = render partial: 'item', locals: {version: v, link_params: @link_params}
+      = render_cell :version_selector, :all_versions, version: @version, reference: @ref, is_alt: @is_alt, force_style: @force_style, link_params: @link_params
+
