--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,4 +1,11 @@
-.dynamic_menu.version_select{style: @force_style, id: @is_alt ? "menu_alt_version" : "menu_version", "data-reference" => @link_params.nil? ? bible_path(@ref.merge({version: nil, verse: nil})) : nil}
+:ruby
+  if @link_params
+    href = url_for(@link_params)
+  else
+    href = bible_path(@ref.merge({version: nil, verse: nil}))
+  end
+
+.dynamic_menu.version_select{style: @force_style, id: @is_alt ? "menu_alt_version" : "menu_version", "data-link-base" => href, "data-link-needs-param" => (!@link_params.nil?).to_s}
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
@@ -9,6 +16,6 @@
         %tr
           %th{:colspan => '2'}= t('recent versions')
         - @recent_versions.each do |v|
-          = render partial: 'item', locals: {version: v, link_params: @link_params}
+          = render partial: 'item', locals: {version: v}
       = render_cell :version_selector, :all_versions, version: @version, reference: @ref, is_alt: @is_alt, force_style: @force_style, link_params: @link_params
 
