--- a/app/cells/version_selector/_item.haml
+++ b/app/cells/version_selector/_item.haml
@@ -1,7 +1,6 @@
-- href = link_params ? url_for(link_params.merge(version: version.osis)) : "#"
 %tr
   %th
-    %a.spinner_trigger{"data-version" => version.osis, :href => href}= version.osis_human
+    %a.spinner_trigger{"data-version" => version.osis, :href => "#"}= version.osis_human
   %td{class: version.audio? ? "audio" : ""}
-    %a.spinner_trigger{"data-version" => version.osis, :href => href}
+    %a.spinner_trigger{"data-version" => version.osis, :href => "#"}
       %div= version.title
