--- a/app/assets/stylesheets/status.sass
+++ b/app/assets/stylesheets/status.sass
@@ -1,3 +1,12 @@
 section
   margin-bottom: 20px
   
+section .content
+  opacity: .3
+  
+section iframe:hover
+  opacity: 1
+
+section h3
+  opacity: 1 !important
+  
