added js loading in window.load, closes #211
Change-Id: I831413fe5296347fc38a80c9d8419b9b1fe36f71

--- a/app/cells/notes_list_widget/stub.html.haml
+++ b/app/cells/notes_list_widget/stub.html.haml
@@ -1,4 +1,5 @@
-%div.widget.notes
+%div.widget.notes.ajax_me{"data-ajax" => "/bible/#{@reference}/notes"}
+
   %header
     %span.header_icon_note= @title 
   %section
