--- a/app/views/shared/_widget_bookmarks_stub.html.haml
+++ b/app/views/shared/_widget_bookmarks_stub.html.haml
@@ -1,4 +1,4 @@
-.widget.bookmarks
+.widget.bookmarks.ajax_me{"data-ajax" => "/bible/widgets/bookmarks"}
   %header
     %span.header_icon_bookmark= t('recent bookmarks')
   %ul
