--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -298,40 +298,39 @@
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
-
 .nav_prev,
 .nav_next
   background:
-    image: image-url("arrow_sprite.png")
+    image: image-url("arrow_sprite_thin.png")
     repeat: no-repeat
   color: transparent
   font-size: 0
   margin-top: -20px
   overflow: hidden
   text-indent: -99999px
-  width: 40px
-  height: 40px
+  width: 45px
+  height: 45px
   position: fixed
-  top: 50%
+  height: 85%
+  border-radius: 4px
 
 .nav_prev
-  background-position: 0 -40px
+  background-position: 10px 48%
   margin-left: -55px
 
 .nav_prev:hover
-  background-position: -40px -40px
+  background-color: #f1f1f1
 
 .nav_prev:active
   background-position: -80px -40px
 
 .nav_next
   margin-left: 473px
+  background-position: -58px 48%
 
 .nav_next:hover
-  background-position: -40px 0
+  background-color: #f1f1f1
 
-.nav_next:active
-  background-position: -80px 0
 
 // `Misc Classes
 //----------------------------------------------------------------------------------------------------
