added giving@lifechurch email
Change-Id: Ifc4d414b1f237fd5959d6c63009a204edf8d8142

--- a/app/views/donations/confirm.html.haml
+++ b/app/views/donations/confirm.html.haml
@@ -7,6 +7,7 @@
       = hidden_field_tag k, v
     = hidden_field_tag :x_header_email_receipt, t('donate.email header')
     = hidden_field_tag :x_footer_email_receipt, t('donate.email footer')
+    = hidden_field_tag :x_merchant_email, "giving@lifechurch.tv"
 
     %p
       %strong= "#{t('donate.name')}: "
