--- a/app/views/donations/confirm.html.haml
+++ b/app/views/donations/confirm.html.haml
@@ -1,13 +1,14 @@
 %article
   %h1= t('make a donation')
   %p= t('donate.header confirm copy')
-  = form_for :sim_transaction, :url => AuthorizeNet::SIM::Transaction::Gateway::TEST do |f|
+  = form_for :sim_transaction, :url => "https://secure.authorize.net/gateway/transact.dll" do |f|
     = sim_fields(@sim_transaction)
     - @tr.each do |k, v|
       = hidden_field_tag k, v
     = hidden_field_tag :x_header_email_receipt, t('donate.email header')
     = hidden_field_tag :x_footer_email_receipt, t('donate.email footer')
     = hidden_field_tag :x_merchant_email, "giving@lifechurch.tv"
+    = hidden_field_tag :x_test_request, true
 
     %p
       %strong= "#{t('donate.name')}: "
