--- a/app/views/donations/us.html.haml
+++ b/app/views/donations/us.html.haml
@@ -17,8 +17,8 @@
     %p
       = label_tag 'tr[x_amount]', t('donate.amount')
       %br
-      $
-      = text_field_tag 'tr[x_amount]', nil, type: "tel", value: "10.00"
+      %span{style: "display: inline-block; margin-right: -1em; top: 2px; left: 4px; position: relative; z-index: 2"} $
+      = text_field_tag 'tr[x_amount]', nil, type: "tel", value: "10.00", style: "padding-left: 14px;"
     %p
       = label_tag 'tr[x_card_num]', t('donate.card number')
       %br
