fixed non-detecting button
Change-Id: I4af445689fcada6be460b2b477710b05dbc7fd79

--- a/app/assets/stylesheets/donate.sass
+++ b/app/assets/stylesheets/donate.sass
@@ -5,7 +5,17 @@
   float: right
   margin-bottom: 15px
   text-align: right
-  width: 210px
+  width: 240px
+
+#donate_now_wrap .intl
+  text-align: center
+  display: block
+  font-weight: bold
+
+  &:link
+    text-decoration: none
+  &:hover
+    text-decoration: underline
 
 #main article
   background:
@@ -14,7 +24,7 @@
     repeat: no-repeat
   overflow: hidden
   padding-bottom: 0
-  height: 450px
+  height: 480px
 
 #main article h1
   font:
