--- a/app/views/donations/us.html.haml
+++ b/app/views/donations/us.html.haml
@@ -18,17 +18,17 @@
     %p
       = label_tag 'tr[x_amount]', t('donate.amount')
       %br
-      %span{style: "display: inline-block; margin-right: -1em; top: 2px; left: 4px; position: relative; z-index: 2"} $
-      = text_field_tag 'tr[x_amount]', nil, type: "tel", value: "10.00", style: "padding-left: 14px;"
+      %span{style: "display: inline-block; margin-right: -1em; top: 4px; left: 4px; position: relative; z-index: 2"} $
+      = text_field_tag 'tr[x_amount]', nil, type: "tel", value: "10.00", style: "padding-left: 14px; margin-top: 5px"
     %p
       = label_tag 'tr[x_card_num]', t('donate.card number')
       %br
-      = text_field_tag 'tr[x_card_num]', nil, type: "tel"
-    %div.float_right{style: "padding-top: 2em;"}
+      = text_field_tag 'tr[x_card_num]', nil, type: "tel", style: "margin-top: 5px"
+    %div.float_right{style: "padding-top: 2em; margin-top: 3px"}
       %button{class: "action_button_green", action: "submit"}
         = t('donate.preview')
     %p
       = label_tag 'tr[x_exp_date]', t('donate.card exp date')
       %br
-      = select_month Time.now + 1.month, use_month_numbers: true
-      = select_year Time.now + 1.month, start_year: Time.now.year, end_year: Time.now.year+10
+      = select_month Time.now + 1.month, {use_month_numbers: true}, {style: "margin-top: 5px;"}
+      = select_year Time.now + 1.month, {start_year: Time.now.year, end_year: Time.now.year+10}, {style: "margin-top: 5px;"}
