--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -1,6 +1,7 @@
 - @title = "#{@reference.ref_string} #{@version.osis_human}"
 - @reader_menus = true
 - @share_menu = false
+- @verse_modals = false
 
 = render partial: 'reader_header'
 
