calendear today black no matter what, fixed various reading plan actions that i broke with another commit in here cleaning up redundant calls

--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -448,7 +448,7 @@ dd .icon_settings
   font-weight: bold
 
 .cal_month td.today a 
-  color: #000
+  color: #000 !important
 
 .cal_month td.read 
   font-weight: bold
