--- a/app/views/pages/mobile.html.haml
+++ b/app/views/pages/mobile.html.haml
@@ -3,7 +3,7 @@
   %section#mobile_content.float_left
     %h2= t('mobile page.h2')
     %section.main
-      %p= t('mobile page.main')
+      %p= t('mobile page.main').html_safe
     %section.multilingual.float_left
       = image_tag "mobile_multilingual.png"
       %h3= t('mobile page.h3')
